# acmepcap

./: .gitignore  README.rst  pyproject.toml  setup.cfg  test_requirements.txt
.github/workflows/: python-test.yml
tests/: test_cli.py  test_ip.py  test_reader.py  test_udp.py  test_writer.py
