[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'acmepcap'
dynamic = ['version']
authors = [
  {name='Andrzej Mateja', email='mateja.and@gmail.com'},
]
description = 'Acme Packet sipmsg.log to packet capture converter.'
readme = 'README.rst'
license = 'MIT'
license-files = ['LICENSE']
keywords = ['Acme', 'AcmePacket', 'SBC', 'sipmsg']
requires-python = '>=3.9'
classifiers = [
    'Development Status :: 4 - Beta',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python :: 3.15',
    'Operating System :: OS Independent',
    'Topic :: Utilities'
]

[project.urls]
Homepage = 'https://github.com/amateja/acmepcap/'

[project.scripts]
acmepcap = 'acmepcap:main'

[tool.setuptools.dynamic]
version = {attr = 'acmepcap.__version__'}
